<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu">

    <item
        android:id="@+id/action_add_top"
        android:title="@string/AddAutoCell"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_bot"
        android:title="@string/AddTeleopCell"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_page_settings"
        android:title="@string/page_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_mode"
        android:title="@string/edit_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_color"
        android:title="@string/change_team_color"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:title="@string/PrefDebug_tile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:title="@string/reset_menu"
        app:showAsAction="never" />
</menu>