<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/popup_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_cell"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_counter_example"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popup_help_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toBottomOf="@+id/help_text"
        app:boxStrokeColor="@color/accent_color"
        app:counterTextColor="@color/accent_color"
        app:hintTextColor="@color/accent_color"
        >

        <!--This is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popup_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/yes_no_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/filledTextField"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/help_button"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/help_icon_red"
        app:layout_constraintBottom_toTopOf="@+id/number_counter_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/popup_title_example"
        />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_the_help_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/popup_title_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/example"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_counter_default"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/DefaultTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--This layout sets the size/dimensions of the box-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popup_edittext_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint=""
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:boxStrokeColor="@color/accent_color"
        app:counterTextColor="@color/accent_color"
        app:hintTextColor="@color/accent_color"
        >

        <!--This is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popup_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/yes_no_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/filledTextField"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/max_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/max_value"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_edittext_layout"
        />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/number_counter_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_title"
        numberpicker:custom_layout="@layout/ui_number_picker"
        numberpicker:focusable="false"
        numberpicker:max="99"
        numberpicker:min="0"
        numberpicker:unit="1"
        numberpicker:value="0"
        />

    <TextView
        android:id="@+id/default_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_counter_min"
        />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/number_counter_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_title"
        numberpicker:custom_layout="@layout/ui_number_picker"
        numberpicker:focusable="false"
        numberpicker:max="99"
        numberpicker:min="0"
        numberpicker:unit="1"
        numberpicker:value="0"
        />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/number_counter_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_title_example"
        numberpicker:custom_layout="@layout/ui_number_picker"
        numberpicker:focusable="false"
        numberpicker:max="99"
        numberpicker:min="0"
        numberpicker:unit="1"
        numberpicker:value="0"
        />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/number_counter_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toBottomOf="@+id/min_title"
        numberpicker:custom_layout="@layout/ui_number_picker"
        numberpicker:focusable="false"
        numberpicker:max="99"
        numberpicker:min="0"
        numberpicker:unit="1"
        numberpicker:value="0" />

    <TextView
        android:id="@+id/min_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/min_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toBottomOf="@+id/popup_help_layout"
        />

    <TextView
        android:id="@+id/popupWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/popup_title_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_25_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_50_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_25_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_75_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>